update graalvm build config